- macOS installer coverage added to package adapter:
- `.pkg` now captures deterministic XAR header and script/permission hint counters.
- `.dmg` now captures deterministic trailer marker hints (`koly`) without mounting.
- Document adapter deepened for `.docm/.xlsm`:
- ZIP structure + relationships are inspected deterministically for macro/embed/external-link indicators.
- IaC/CI adapter extraction deepened:
- Deterministic action reference parsing now distinguishes pinned commit/digest refs from unpinned refs.
- Remote module/source indicators and external runner signals are counted with structured counters in adapter summary output.
- Container adapter extraction deepened:
- OCI layout counts now include manifest and blob counts.
- Container tarball detection now recognizes Docker-style markers (`manifest.json` + `repositories`) and OCI tar markers (`oci-layout` + `index.json` + `blobs/sha256/*`) for local tar inputs.
- Explicit OCI layout route now fails closed when manifests exist but blob evidence is missing (`CONTAINER_LAYOUT_INVALID`), preventing partial container identity acceptance.
- SBOM JSON parsing now emits bounded package/component counts when present.
- Signature/cert adapter extraction deepened:
- Deterministic PEM block counting for certificate/PKCS7/signature material.
- Binary OID hint counts added for CMS signedData and timestamp EKU indicators.
- Explicit signature route now requires real envelope/OID/DER evidence; text-only timestamp/chain hints no longer satisfy strict signature validity checks.
- SCM/source evidence adapter extraction deepened:
- Deterministic repo counters now include tree entry count, branch/tag ref counts, detached HEAD indicator, and working-tree entry count.
- SCM adapter now emits deterministic worktree state evidence (staged/unstaged/untracked counts) and `SCM_WORKTREE_DIRTY` when local repo state is dirty.
- SCM fallback hardening: